Fixing styling issues when on mobile device. Updating default image.

--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -18,7 +18,6 @@ font-family: -apple-system,BlinkMacSystemFont,"Segoe UI",Roboto,"Helvetica Neue"
 
 /* put footer in---dynamic or static? */
 
-
 #fullNav {
     background-color: #34003C;
     color: white;
@@ -89,7 +88,7 @@ font-family: -apple-system,BlinkMacSystemFont,"Segoe UI",Roboto,"Helvetica Neue"
 }
 
 .pictureCard {
-    height: 580px;
+    height: 100%;
     /* border-color: #34003C; */
     border: solid 1px #34003C!important;
     border-radius: .25rem;
@@ -128,6 +127,25 @@ font-family: -apple-system,BlinkMacSystemFont,"Segoe UI",Roboto,"Helvetica Neue"
 #signInButton {
     display: flex;
 }
+
+.yourImg, .celebImg {
+    max-width: 100%;
+    max-height: 350px;
+    padding-bottom: 15px;
+}
+
+/*Shadow effect on the bottom of the nav bar*/
+.navbar {
+    box-shadow: 0px 4px 8px 0px #888888;
+}
+
+@media only screen and (max-width: 576px) {
+    .jumbotronTitle {
+        font-size: 2.7rem;
+    }
+}
+
+
 
 /* Primary Color: #34003C */
 /* Secondary Color: #CCCCCC */
